--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
+    "razorpay": "^2.9.0",
     "sequelize": "^6.32.1"
   }
 }
