--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Prasad Parik",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1415.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
