--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
     "aws-sdk": "^2.1415.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
