--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.0",
     "sequelize": "^6.32.1",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.0"
   }
 }
